--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   background-color: #313a49;
   margin: auto;
   margin-top: 5vh;
+  border-radius: 20px;
 
   display: flex;
   flex-direction: column;
@@ -21,6 +22,7 @@
   color: #4cdb98;
   letter-spacing: 1;
   padding: 40px 10px 10px;
+  font-size: 10px;
 
   text-align: center;
   justify-content: center;
@@ -28,6 +30,8 @@
 }
 .fhead-text{
   margin: 50px;
+  font-size: 18px;
+  letter-spacing: 2px;
 }
 .body-text{
   color: #ffffff;
@@ -57,7 +61,7 @@
 .app__control{
   border-radius: 100%;
   z-index: 10;
-  background-color: #fff;
+  background-color: #53ffab;
   width: 50px;
   height: 50px;
   /* margin: 50px 47%; */
@@ -74,6 +78,13 @@
   .app__control{
     left: 42%;
   }
+  .app__container{
+    max-width: 80%;
+    height: auto;
+    border-radius: 20px;
+    margin: auto;
+    margin-left: 32px;
+  }
 }
 @media screen and (min-width: 900px) {
   .app__control{
@@ -81,7 +92,7 @@
   }
 }
 .app__control:hover{
-  background-color: #53ffab;
+  background-color: #ffffff;
 }
 .control{
   margin: 12.5px ;
